--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"eslint-config-next": "11.1.2",
 		"eslint-plugin-react": "^7.25.1",
 		"file-loader": "^6.2.0",
-		"url-loader": "^4.1.1"
+		"url-loader": "^4.1.1",
+		"webpack": "^5.52.1"
 	}
 }
